2015-11-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/hexglyphs/hexglyphs.tcl: now printing the whole
    alphabet and some puntuation character
    * src/rivetcmd/rivetCore.c: Implementing command exit
    * src/apache-2/mod_rivet.c: New command ::exit required the flag
    exit_process be checked to see if a child process must exit and
    also to treat exit like an ::rivet::abort_page invocation that
    eventually causes the process to go away. Abort page conditions now 
    checked through flag abort_page
    * rivet/init.tcl.in: now reimplementing the core command exit

2015-10-21 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/hexglyphs/hexglyphs.tcl: package to create ASCII art 
    glyphs of hexadecimal characters

2015-09-09 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: We don't delete the Tcl interpreter anymore,
    we just let the process exit do the cleanup.

2015-07-29 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: someone noticed the handler was registered
    as APR_HOOK_LAST instead APR_HOOK_MIDDLE as recommended by the 
    specifications

2015-07-27 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: add more comments, improved code 
    readability in Rivet_CreateTclInterp

2015-06-21 Massimo Manghi <mxmanghi@apache.org>
    * VERSION: new version 2.2.4
    * configure.ac: changing version to 2.2.4, definition of config.h
    variable RIVET_CONFIGURE_CMD carring the configure full command that
    prepared the build of the module
    * src/apache-2/mod_rivet.c: Improved readability of code in 
    Rivet_ChildHandlers. Add RIVET_CONFIGURE_CMD to 'server' array

2015-06-03 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.css: changing selector for namespace table as DocBook
    seems not to honor the id attribute anymore
    * doc/xml/request.css: changing the id "namespaces" as class

2015-05-21 Massimo Manghi <mxmanghi@apache.org>