@@ -1,3 +1,8 @@
+2015-11-20 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/rivet-tcl/catch.tcl: new command [::rivet::catch ...] wraps
+    the core command but returns an error anyway if raised by
+    either [::rivet::abort_page] or [::rivet::exit]
+
 2015-11-18 Massimo Manghi <mxmanghi@apache.org>
     * rivet/packages/hexglyphs/hexglyphs.tcl: now printing the whole
     alphabet and some puntuation character
